<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogUpScreen"
    android:background="@color/main_color"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_marginTop="70dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/world_cinema"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="26sp"
        android:text="@string/worldcinema"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/stroke_background">

        <EditText
            android:id="@+id/user_firstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_color"
            android:textColor="@color/white"
            android:hint="@string/name"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/stroke_background">

        <EditText
            android:id="@+id/user_lastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_color"
            android:textColor="@color/white"
            android:hint="@string/last_name"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/stroke_background">

        <EditText
            android:id="@+id/user_reg_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_color"
            android:textColor="@color/white"
            android:hint="@string/e_mail"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/stroke_background">

        <EditText
            android:id="@+id/user_passwordRegistration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_color"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/stroke_background">

        <EditText
            android:id="@+id/user_copyPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/main_color"
            android:textColor="@color/white"
            android:hint="@string/copy_password"
            android:textColorHint="@color/grey"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="onNewRegistrationClick"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/registration"
        android:layout_marginTop="30dp"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@drawable/button_red_background"/>
    <androidx.appcompat.widget.AppCompatButton
        android:onClick="onAccClick"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/account_equals"
        android:layout_marginTop="15dp"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@drawable/stroke_background"/>


</LinearLayout>